# cee-us

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  package.xml  pyproject.toml  requirements.no_mujoco.txt  requirements.txt  setup.cfg  setup.py
docs/: setup_wsl_uv.md
scripts/: setup_mujoco200_wsl.sh
zh_docs/: README.md
zh_docs/changes/: 2026-02-14_ce7d358_wsl-uv-mujoco-setup.md  2026-02-15_18e43c6_expand-gnn-crash-course.md  2026-02-15_TMP_expand-gnn-crash-course.md  2026-02-15_f6006ac_aggregation-demystified.md  2026-02-15_gnn-guide.md  2026-02-16_b97d6b2_beginner-friendly-segment-sum-mean.md  2026-02-16_e2ad057_segment-sum-mean-scatter.md  2026-02-17_367d1ed_global-context-world-model.md  2026-02-18_0cc964c_world-model-mapping-across-gnn-guide.md  2026-02-18_36e2a0a_paper-two-phase-pipeline-mapping.md  README.md
zh_docs/gnn_guide/: 01_gnn_crash_course.md  02_object_centric_dynamics_in_cee-us.md  03_code_walkthrough_graphneuralnetwork.md  04_code_walkthrough_gnn_forward_model_training.md  05_ensemble_parallel_gnn.md  06_how_to_run_and_tune_gnn_experiments.md  07_aggregation_demystified.md  08_segment_sum_mean_scatter_explained.md  09_global_context_agent_action_in_world_model.md  README.md
